generated/checker-for-evaluation/generated/test-UAF-9462f4ca56e7d2430fdb6dcc8498244acbfc4489/build_logs/2/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::GSMCleanupVisitor::VisitCallExpr(clang::CallExpr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:46:17: warning: unused variable ‘Origin’ [-Wunused-variable]
   46 |     const Expr *Origin = CE;
      |                 ^~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:144:17: error: ‘clang::ASTContext& {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const::DummyCheckerContext::getASTContext() const’ marked ‘override’, but does not override
  144 |     ASTContext &getASTContext() const override { return Ctx; }
      |                 ^~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:145:24: error: ‘const clang::LangOptions& {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const::DummyCheckerContext::getLangOpts() const’ marked ‘override’, but does not override
  145 |     const LangOptions &getLangOpts() const override { return Ctx.getLangOpts(); }
      |                        ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:146:26: error: ‘const clang::SourceManager& {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const::DummyCheckerContext::getSourceManager() const’ marked ‘override’, but does not override
  146 |     const SourceManager &getSourceManager() const override { return Ctx.getSourceManager(); }
      |                          ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:148:21: error: ‘clang::ento::ProgramStateRef {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const::DummyCheckerContext::getState() const’ marked ‘override’, but does not override
  148 |     ProgramStateRef getState() const override { return nullptr; }
      |                     ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:149:10: error: ‘void {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const::DummyCheckerContext::addTransition(clang::ento::ProgramStateRef) const’ marked ‘override’, but does not override
  149 |     void addTransition(ProgramStateRef) const override { }
      |          ^~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:150:19: error: ‘clang::ento::ExplodedNode* {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const::DummyCheckerContext::generateNonFatalErrorNode(clang::ento::ProgramStateRef, const char*) const’ marked ‘override’, but does not override
  150 |     ExplodedNode *generateNonFatalErrorNode(ProgramStateRef = nullptr, const char * = nullptr) const override { return nullptr; }
      |                   ^~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In constructor ‘{anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const::DummyCheckerContext::DummyCheckerContext(clang::ASTContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:143:51: error: no matching function for call to ‘clang::ento::CheckerContext::CheckerContext()’
  143 |     DummyCheckerContext(ASTContext &Ctx) : Ctx(Ctx) { }
      |                                                   ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:41:3: note: candidate: ‘clang::ento::CheckerContext::CheckerContext(clang::ento::NodeBuilder&, clang::ento::ExprEngine&, clang::ento::ExplodedNode*, const clang::ProgramPoint&, bool)’
   41 |   CheckerContext(NodeBuilder &builder,
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:41:3: note:   candidate expects 5 arguments, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note: candidate: ‘constexpr clang::ento::CheckerContext::CheckerContext(const clang::ento::CheckerContext&)’
   24 | class CheckerContext {
      |       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note:   candidate expects 1 argument, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note: candidate: ‘constexpr clang::ento::CheckerContext::CheckerContext(clang::ento::CheckerContext&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/PathSensitive/CheckerContext.h:24:7: note:   candidate expects 1 argument, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkASTCodeBody(const clang::Decl*, clang::ento::AnalysisManager&, clang::ento::BugReporter&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:165:38: error: base operand of ‘->’ has non-pointer type ‘clang::ASTContext’
  165 |     ExplodedNode *N = BR.getContext()->generateNonFatalErrorNode();
      |                                      ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:170:52: error: cannot convert ‘clang::CharSourceRange’ to ‘clang::SourceRange’
  170 |     Report->addRange(CharSourceRange::getTokenRange(BugLoc, BugLoc));
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
      |                                                    |
      |                                                    clang::CharSourceRange
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:222:29: note:   initializing argument 1 of ‘void clang::ento::BugReport::addRange(clang::SourceRange)’
  222 |   void addRange(SourceRange R) {
      |                 ~~~~~~~~~~~~^
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
